[gd_scene load_steps=9 format=2]

[ext_resource path="res://BugManager.gd" type="Script" id=1]
[ext_resource path="res://assets/PICK_JUST_ONE_BUG.wav" type="AudioStream" id=2]
[ext_resource path="res://menu/RetryMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/pick_just_one_bug.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 280, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 280, 0, 280, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 560, 0, 280, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="BugManager" type="Node"]
script = ExtResource( 1 )

[node name="JUSTPICKONEBUG" type="AnimatedSprite" parent="."]
position = Vector2( 279, -152 )
frames = SubResource( 7 )
playing = true

[node name="JUSTPICKONEBUGSOUND" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="RetryMenu" parent="." instance=ExtResource( 3 )]

[connection signal="next_level" from="RetryMenu" to="." method="_on_RetryMenu_next_level"]
[connection signal="restart" from="RetryMenu" to="." method="_on_RetryMenu_restart"]
